Modificado o exercicio de tabuada para que pareca mais com o do professor.

--- a/modulo-E-repeticao-em-javascript/exercicio/ex020/index.html
+++ b/modulo-E-repeticao-em-javascript/exercicio/ex020/index.html
@@ -25,7 +25,9 @@
 			<button type="button" id="btn-calcular" onclick="calcular()">Calcular</button>
 		</div>
 		<div id="saida">
-			
+			<!-- O size é necessário para definir a quantidade de
+			options que serão mostrados (NÃO é possivel dimensionar pelo css) -->
+			<select name="select-tabuada" size="10"></select>
 		</div>
 	</section>
 	<footer>
