Modificado o exercicio para melhor se adequar com o do professor.

--- a/modulo-F-avancando-os-estudos-em-javascript/exercicios/ex036/index.html
+++ b/modulo-F-avancando-os-estudos-em-javascript/exercicios/ex036/index.html
@@ -13,16 +13,16 @@
 
 	<!-- Google Fonts: Nunito -->
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
-	<title>Analizador de números</title>
+	<title>Analisador de números</title>
 </head>
 <body>
 	<header>
-		<h1>Analizador de números</h1>
+		<h1>Analisador de números</h1>
 	</header>
 	<section>
 		<div id="entrada">
 			<div class="entrada-valor">
-				Valor: <input type="number" name="number-valor" class="input" placeholder="Informe um valor" autofocus>
+				Valor (entre 1 e 100): <input type="number" name="number-valor" class="input" placeholder="Informe um valor" autofocus>
 				<button id="btn-adicionar" class="btn">Adicionar</button>
 			</div>
 			<div class="entrada-valores">
